--- a/themes/default/products/product-single.njk
+++ b/themes/default/products/product-single.njk
@@ -28,6 +28,7 @@
            data-cms-label="Product Details"
            data-cms-field="top"
            data-cms-values='{{ {
+             "og_image": product.og_image,
              "price": product.price,
              "compare_at_price": product.compare_at_price,
              "sku": product.sku,
