--- a/templates/customer/account.njk
+++ b/templates/customer/account.njk
@@ -154,7 +154,7 @@
             </div>
             <div class="site-actions">
               <a href="http://${site.subdomain}.localhost:3000" target="_blank" class="btn btn-sm btn-secondary">Visit Site</a>
-              <a href="http://${site.subdomain}.localhost:3000/admin" target="_blank" class="btn btn-sm btn-primary">Admin</a>
+              <a href="http://${site.subdomain}.localhost:3000/admin/" target="_blank" class="btn btn-sm btn-primary">Admin</a>
             </div>
           </div>
         `).join('');
