--- a/themes/default/customer/account.njk
+++ b/themes/default/customer/account.njk
@@ -339,7 +339,7 @@
             </div>
             <div class="site-actions">
               <a href="http://${site.subdomain}.${baseDomain}" target="_blank" class="btn btn-sm btn-secondary">Visit Site</a>
-              <a href="http://${site.subdomain}.${baseDomain}/admin" target="_blank" class="btn btn-sm btn-primary">Admin</a>
+              <a href="http://${site.subdomain}.${baseDomain}/admin/" target="_blank" class="btn btn-sm btn-primary">Admin</a>
             </div>
           </div>
         `).join('');
