--- a/templates/layouts/base.njk
+++ b/templates/layouts/base.njk
@@ -144,6 +144,15 @@
     }
     
     a:hover { filter: brightness(85%); }
+
+    svg { vertical-align: middle; }
+    
+    /* Icon sizes */
+    .w-3 { width: 0.75rem; } .h-3 { height: 0.75rem; }
+    .w-4 { width: 1rem; }    .h-4 { height: 1rem; }
+    .w-5 { width: 1.25rem; } .h-5 { height: 1.25rem; }
+    .w-6 { width: 1.5rem; }  .h-6 { height: 1.5rem; }
+    .w-8 { width: 2rem; }    .h-8 { height: 2rem; }
     
     .container {
       width: 100%;
